switch images to jpegs
for faster loading

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
-    <title>Hi, I'm Annie!</title>
+    <title>Annie M. Medina</title>
   </head>
 
   <body>
     <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">A. M. Medina</a>
+    <a class="navbar-brand" href="#">Annie M. Medina</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,10 +25,10 @@
       <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
+      <a class="nav-link" href="https://anniemmedina.github.io/HW-MyFirstLayout/">About</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Blog</a>
+      <a class="nav-link" href="https://lacreature.wordpress.com">Blog</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Contact</a>
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
       <div class="card">
-        <img src="images/samhsa.png" class="card-img-top" alt="...">
+        <img src="images/samhsa.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Government Agency</h5>
           <p class="card-text">Mental Health resources are now more accessible than ever thanks to the new user friendly interface for Government Agency SAMHSA.</p>
@@ -59,7 +59,7 @@
 
     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
       <div class="card">
-        <img src="images/grow.png" class="card-img-top" alt="...">
+        <img src="images/grow.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Grow</h5>
           <p class="card-text">This delightful plant care app helps users track thier plants health with care reminders, community feedback and gamefied rewards.</p>
@@ -70,7 +70,7 @@
 
     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
       <div class="card">
-          <img src="images/non-profit.png" class="card-img-top" alt="...">
+          <img src="images/non-profit.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Non-Profit Redesign</h5>
           <p class="card-text">A dynamic web-redesign helps to boost local non-profit's online voice on women's health.</p>
@@ -84,7 +84,7 @@
 <!-- About Me -->
 <div class="container">
   <div class="row">
-     <div class="col-sm-8"><img src="images/me.png">
+     <div class="col-sm-8"><img src="images/me.jpg">
     </div>
     <div class="col-sm-4">
     <h1>About Me.</h1>
@@ -117,16 +117,16 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="containerF">
-    <a href="#" class="in">
+    <a href="https://www.linkedin.com/in/anniemedina/" class="in">
       <img src="images/in.png">
   </a>
-  <a href="#" class="db"> 
+  <a href="https://dribbble.com/AnMedina2" class="db"> 
       <img src="images/db.png">
   </a>
-  <a href="#" class="be">
+  <a href="https://www.behance.net/annamedina" class="be">
       <img src="images/be.png">
   </a>
-  <a href="#" class="inst">
+  <a href="https://www.instagram.com/anniesflavorite/" class="inst">
       <img src="images/inst.png">
   </a>
 </div>
