--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
   <body>
     <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Annie M. Medina</a>
+    <a class="navbar-brand" href="#">A. M. Medina</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <!-- Navigation bar collapse -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
       <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="https://anniemmedina.github.io/HW-MyFirstLayout/">About</a>
+      <a class="nav-link" href="#">About</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="https://lacreature.wordpress.com">Blog</a>
@@ -39,42 +40,52 @@
 
   <!-- JumboTron -->
 <div class="jumbotron">
-  <h1 class="display-4">Hello, I'm Annie!</h1>
-  <p class="lead">UX/UI Designer</p>
+<div class="containerJ">
+  <div class="row">
+     <div class="col-sm-7">
+      <h1 class="display-4">Hello!</h1>
+      <p class="lead">From a UX/UI Designer.</p>
+      <p>Hi, I'm Annie Medina, an artist/designer focused on 2D illustration, interface design and user experience. I currently study UX/UI at UC Irvine and work as an Adult Educator instructing art, design and pre-vocational skills to underserved populations.</p>
+    </div>
+    <div class="col-sm-5"><img src="images/me.png">
+    </div>
+</div>
+</div>
 </div>
 
  <!-- Card Container -->
 <div class="container-fluid">
   <div class="row">
+
+    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+            <div class="card">
+              <img src="images/non-profit.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Non-Profit Redesign</h5>
+              <p class="card-text">A dynamic web-redesign helps boost local non-profit's "online voice" on issues of equity for women's health in Orange County.</p>
+              <a href="https://drive.google.com/file/d/11clC_P_A346JgqlgIn_IlEFdGrgRDqv9/view?usp=sharing" class="btn btn-primary">View Project</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+          <img src="images/grow.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Grow</h5>
+            <p class="card-text">This delightful plant care app helps users track thier plants with care reminders, community feedback and gamefied rewards.</p>
+            <a href="https://drive.google.com/file/d/1uyoh6DsQWNOL5EyQk3WbyU_9jvAwXqUJ/view?usp=sharing" class="btn btn-primary">View Project</a>
+        </div>
+      </div>
+    </div>
+
     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
       <div class="card">
         <img src="images/samhsa.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Government Agency</h5>
-          <p class="card-text">Mental Health resources are now more accessible than ever thanks to the new user friendly interface for Government Agency SAMHSA.</p>
+          <p class="card-text">Mental Health resources are now more accessible than ever thanks to the new user friendly interface designed for SAMHSA.gov.</p>
           <a href="https://drive.google.com/file/d/1sDRq9zmDeg3YL0tVvYwSAqJzmKQJ4m0M/view?usp=sharing" class="btn btn-primary">View Project</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-      <div class="card">
-        <img src="images/grow.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Grow</h5>
-          <p class="card-text">This delightful plant care app helps users track thier plants health with care reminders, community feedback and gamefied rewards.</p>
-          <a href="https://drive.google.com/file/d/1uyoh6DsQWNOL5EyQk3WbyU_9jvAwXqUJ/view?usp=sharing" class="btn btn-primary">View Project</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-      <div class="card">
-          <img src="images/non-profit.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Non-Profit Redesign</h5>
-          <p class="card-text">A dynamic web-redesign helps to boost local non-profit's online voice on women's health.</p>
-          <a href="https://drive.google.com/file/d/11clC_P_A346JgqlgIn_IlEFdGrgRDqv9/view?usp=sharing" class="btn btn-primary">View Project</a>
         </div>
       </div>
     </div>
@@ -84,11 +95,11 @@
 <!-- About Me -->
 <div class="container">
   <div class="row">
-     <div class="col-sm-8"><img src="images/me.jpg">
+     <div class="col-sm-8">
+      <h1>About me.</h1>
+      <p>A California native; I was forged by the tempestuous waters of an East Coast art education at RISD. I have an absurd love of: tiny “Kauai” things, thought-provoking books & my Ewok-dog named Honeybean. What was being a printmaker for 7 years at Gemini G.E.L. like? Maybe I will tell you someday. All I can admit for now is that I have an undying passion for art, design and psychology and love teaching these topics to my adult students. I am currently giving my standard  110%, to growing as an artist and designer through UCI’s UX/UI bootcamp & loving it.</p>
     </div>
-    <div class="col-sm-4">
-    <h1>About Me.</h1>
-    <p>A California native; Annie was forged by the tempestuous  waters of an East Coast art education at RISD. She has an absurd love of: tiny “Kauai” things, thought-provoking books & her Ewok-dog named Honeybean. What was being a printmaker at Gemini G.E.L. like? Maybe she will tell you someday. For now, she is giving her standard  110%, to the tantalizing ether of UCI’s UX/UI bootcamp & loving it.</p>
+    <div class="col-sm-4"><img src="images/me2.png">
   </div>
 </div>
 </div>
@@ -99,7 +110,7 @@
     </li></ul></div>
   <div class="col-sm"><ul><li>Printmaking, Illustration, Creative Writing, Bookbinding 
   </li></ul></div>
-  <div class="col-sm"><ul><li>Adult Instruction; Computer Skills, Art, Design & Mental Health</li></ul></div>
+  <div class="col-sm"><ul><li>Adult Instruction; Art, Graphic Design, Mental Health, Pre-Vocational Computer & Soft Skills</li></ul></div>
 </div>
 </div>
 
